<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="welcomeText">Welcome to Texts</string>
    <string name="loginButton">Login</string>
    <string name="signupButton">Sign Up</string>
    <string name="loginPrompt">Login to Texts</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="emailAutofillHInt">email</string>
    <string name="passwordAutofillHint">password</string>
    <string name="submitButton">Submit</string>
    <string name="signupPrompt">Sign Up to Texts</string>
    <string name="homescreenTitle">Choose an Action</string>
    <string name="addTextButton">Add Text...</string>
    <string name="viewAllTextsButton">View all Texts...</string>
    <string name="addTextPrompt">Add New Text</string>
    <string name="textTitleHint">Enter Title</string>
    <string name="textDescriptionHint">Enter Description</string>
    <string name="saveTextButton">Save</string>
    <string name="allTextsTitle">All Your Saved Texts</string>
    <string name="savedTextTitlePlaceholder">Text Title</string>
    <string name="savedTextDescriptionPlaceholder">A short description of text saved to database.</string>
</resources>
